# kashboard

./: Cargo.toml  README.md
migrations/: 20241221213033_init.sql
src/: main.rs
src/calendar/: mod.rs  routes.rs
src/meals/: mod.rs  model.rs  routes.rs
src/recipes/: mod.rs  model.rs  routes.rs
src/utilities/: council.rs  mod.rs  octopus.rs  routes.rs
templates/: bin_data.html  main.html  octopus_data.html  utilities.html
templates/meals/: index.html  list.html  plan.html  recipe.html  shopping_list.html
templates/recipes/: create_success.html  list.html  plan.html  recipe.html  recipe_create.html
