[package]
name = "kashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = "0.4.39"
dotenv = "0.15.0"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["cookies"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio" , "chrono" ] }
tera = "1.20.0"
